--- a/Project1/contact.html
+++ b/Project1/contact.html
@@ -11,7 +11,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:800" rel="stylesheet">
 </head>
 <body>
-	<div class="topNav" id="topNav">
+<div id="topNav">
 	<ul>
 	  <li><a href="home.html">Home</a></li>
 	  <li><a href="about.html">About Us</a></li>
@@ -19,7 +19,7 @@
 	  <li><a href="#forum">Forum</a></li>
 	  <li><a href="contact.html" class="selected">Contact</a></li>
 	  </ul>
-	</div>
+	  </div>
 	<div class="forms">
 	<form>
 		<label class="e">Email<input type="email" name="" class="email" ></label>
@@ -32,10 +32,7 @@
    	<h2 class="h2">Hiking in the snow to Burfellsgja</h2>
    	<p id="p1">Magnus, an outdoor enthusiast, took me on a hiking trip to this ancient field in a snowy afternoon.</p>
    	<h4 id="previous">&larr; Previous Story</h4>
-
    	</div>
-
-
    <div id="right">
    	<h2 class="h2">The gated Buenos Aires community</h2>
    	<p id="p2">The richest and poorest residents of Argentina's capital are seperated by the walls of gated commuinties.</p>
