--- a/Project1/stories.html
+++ b/Project1/stories.html
@@ -9,7 +9,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:800" rel="stylesheet">
 </head>
 <body>
-	<div class="topNav" id="topNav">
+	<div id="topNav">
 	<ul>
 	  <li><a href="home.html">Home</a></li>
 	  <li><a href="about.html">About Us</a></li>
@@ -17,9 +17,11 @@
 	  <li><a href="#forum">Forum</a></li>
 	  <li><a href="contact.html">Contact</a></li>
 	  </ul>
-	  <h1 class="h1">Mount Bromo</h1>
-	  <h3 class="h3">Indonesia</h3>
-	  <h5 class="h5">by Anthony Goldberg</h5>
+	  </div>
+	   <div class="headers">
+	  <h1 id="h1">Mount Bromo</h1>
+	  <h3 id="h3">Indonesia</h3>
+	  <h5 id="h5">by Anthony Goldberg</h5>
 	</div>
 	<div class="bottom">
 		<img src="beginner-project\top-img.png">
