--- a/Project1/about.html
+++ b/Project1/about.html
@@ -9,7 +9,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:800" rel="stylesheet">
 </head>
 <body>
-	<div class="topNav" id="topNav">
+	<div id="topNav">
 	<ul>
 	  <li><a href="home.html">Home</a></li>
 	  <li><a href="about.html" class="selected">About Us</a></li>
@@ -17,6 +17,7 @@
 	  <li><a href="#forum">Forum</a></li>
 	  <li><a href="contact.html">Contact</a></li>
 	  </ul>
+	  </div>
 	  </div>
 	  <div id="bod">
 	  	<p class="content"><span id="firstletter">M</span>ount Bromo is probably one of the most famouse scenic attraction in East Java of Indonesia. It is famous for its magnificient sunrise views and view of volcano crater there, which is very rare to see. That goes well for Kawah Ijen Volcano Crater</p>
